Basic version of the new version of the site Pataconf

--- a/content/sass/sections/_header.sass
+++ b/content/sass/sections/_header.sass
@@ -29,7 +29,7 @@ html, body
   width: 100%
   margin: 0
   padding: 3rem 0 4rem
-  background-color: $color-blue-strong
+  background-color: $color-black
 
   @media (max-width: 370px)
     padding: 2rem 0 3rem
