--- a/content/sass/sections/_content.sass
+++ b/content/sass/sections/_content.sass
@@ -1,7 +1,7 @@
 .container-devfest-content
   max-width: 1200px
   margin: 0 auto
-  padding: 5rem 0 3rem 0
+  padding: 1rem 0 3rem 0
 
   @media (max-width: 995px)
     text-align: center
@@ -129,18 +129,46 @@
 text
   fill: url(#texture)
 
-
-.agenda
+.topics
   max-width: 960px
   margin: auto
-  padding: 0 2rem 5rem
+  //padding: 0 2rem 5rem
 
   .table-wrapper
     overflow: auto
 
   h2
     font-size: 2.5rem
-    text-align: center
+    //text-align: center
+    color: $color-blue-strong
+
+  table
+    min-width: 800px
+    width: 99.9%
+
+  td
+    width: 8%
+    border: 1px solid #eee
+    padding: 1.3rem 0.6rem
+    vertical-align: top
+    line-height: 1.4
+
+  tr:hover
+    td
+      background: #f8f8f8
+
+
+.agenda
+  max-width: 960px
+  margin: auto
+  //padding: 0 2rem 5rem
+
+  .table-wrapper
+    overflow: auto
+
+  h2
+    font-size: 2.5rem
+    //text-align: center
     color: $color-blue-strong
 
   table
@@ -247,4 +275,3 @@ text
 
   &:before
     content: "Ocultar "
-
