Logo and Call for speakers

--- a/content/sass/sections/_content.sass
+++ b/content/sass/sections/_content.sass
@@ -19,7 +19,7 @@
 .devfest-content__desc
   font-size: 1.9rem
   max-width: 770px
-  color: $color-blue-strong
+  color: $color-black
   //background-image: url(../img/texturatexto.png)
   //-webkit-background-clip: text
 
