--- a/content/sass/sections/_header.sass
+++ b/content/sass/sections/_header.sass
@@ -10,14 +10,12 @@ html, body
 
 
 .logo
-  background: url('/img/logoDevfest.png') center top no-repeat
+  background: url('/img/pataconf.png') center top no-repeat
   margin: 0 auto
   overflow: hidden
   text-indent: -999em
   height: 34vw
   max-width: 730px
-  max-height: 270px
-  background-size: 100%
 
   @media (max-width: 650px)
     margin-bottom: 3rem
