Responsive logo pataconf

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -339,11 +339,8 @@ html, body {
 
 .logo {
   background: url("./../img/pataconf.png") center top no-repeat;
-  margin: 0 auto;
-  overflow: hidden;
-  text-indent: -999em;
-  height: 34vw;
-  max-width: 730px; }
+  height: 350px;
+}
   @media (max-width: 650px) {
     .logo {
       margin-bottom: 3rem; } }
