--- a/content/sass/sections/_header.sass
+++ b/content/sass/sections/_header.sass
@@ -11,11 +11,7 @@ html, body
 
 .logo
   background: url('/img/pataconf.png') center top no-repeat
-  margin: 0 auto
-  overflow: hidden
-  text-indent: -999em
-  height: 34vw
-  max-width: 730px
+  height: 350px;
 
   @media (max-width: 650px)
     margin-bottom: 3rem
