Reconfig gulp task

--- a/content/sass/sections/_header.sass
+++ b/content/sass/sections/_header.sass
@@ -10,7 +10,7 @@ html, body
 
 
 .logo
-  background: url('/img/pataconf.png') center top no-repeat
+  background: url('./../img/pataconf.png') center top no-repeat
   height: 350px;
 
   @media (max-width: 650px)
