--- a/content/sass/sections/_footer.sass
+++ b/content/sass/sections/_footer.sass
@@ -1,105 +1,43 @@
 .footer
-  background-color: $color-black
-  margin: 0 auto
-  color: $color-blue-light
-
-  a
-    color: inherit
-    text-decoration: none
-
-    &:hover
-      color: white
-
-.container-elements-footer
-  padding: 0.5rem 0 0.3rem
+  background-color: $color-yellow
+  color: $color-black
+  padding: .5rem
   display: flex
-  align-items: baseline
-  letter-spacing: 1px
-  max-width: 980px
-  font-weight: bold
-  margin: auto
-
-  @media (max-width: 1200px)
-    padding: 0.5rem 7rem 0.3rem
-
-  @media (max-width: 1060px)
-    display: block
-    text-align: center
-    padding: 0.5rem 7rem 0.1rem
-
-  @media (max-width: 650px)
-    padding: 0.5rem 2rem 0.1rem
-
-  @media (max-width: 460px)
-    padding: 0.5rem 1rem 0.1rem
-
-
-.footer__support,
-.footer__follow-us
-  display: inline-block
-
-  @media (max-width: 1060px)
-    display: block
-
-.footer__support
-  line-height: 1.7
-  flex: 1
-
-.footer__follow-us
-  text-align: right
-  position: relative
-
-  @media (max-width: 1060px)
-    text-align: center
-
-  @media (max-width: 480px)
-    margin-top: 2.5rem
-
-
-  a
-    text-decoration: none
-
-    &:before
-      content: '\e603'
-      font-family: icomoon
-      color: white
-      top: 0.1rem
-      right: 13rem
-      margin: 0 0.3rem 0 0.6rem
-      text-decoration: none
-      display: inline-block
-
-.ride-logo,
-.rutan-logo
-  display: inline-block
-  margin-left: 0.4rem
-  margin-right: 0.4rem
-
-  &:before
-    content: "\e600"
-    font-family: icomoon
-    color: white
-    font-size: 1.5rem
-
-.rutan-logo
-  vertical-align: sub
-
-
-@media screen and (max-width: 770px)
-  .footer__text-all
+  border-top: 3px solid $color-blue-strong
+  justify-content: space-between
+  align-items: center
+  &__colombia-dev
+    display: flex
     flex-direction: column
     align-items: center
-    text-align: center
-
-  .footer__follow-us,
-  .footer__support
-    width: auto
-
-
-.footer__smaller
-  // font-size: 0.9em
-  // font-weight: 500
-  text-align: center
-  padding: 0rem 2rem 3rem
-  font-weight: bold
-  // color: rgba(255,255,255,0.6)
+    &__text
+      margin: 0 0 .3rem
+    &__logo
+      width: 4rem
+    &__ruta-n
+      display: flex
+      justify-content: center
+      align-items: center
+      &__text
+        margin: 0
+        margin-right: .5rem
+  &__cod
+    &__link
+      color: inherit
+      &:hover
+        color: white
+  &__follow-us
+    display: flex
+    justify-content: center
+    align-items: center
+    &:before
+      margin-right: .5rem
+      font-size: 1.5rem
+      color: $color-white
+      content: '\e603'
+      font-family: icomoon
+    &__link
+      color: inherit
+      margin-left: .6rem
+      &:hover
+        color: $color-white
