--- a/content/sass/sections/_content.sass
+++ b/content/sass/sections/_content.sass
@@ -1,277 +1,98 @@
-.container-devfest-content
-  max-width: 1200px
+.cfp
+  display: flex
+  width: 70%
   margin: 0 auto
-  padding: 1rem 0 3rem 0
-
-  @media (max-width: 995px)
-    text-align: center
-
-
-.devfest-content
-  padding: 0 7rem
-
-  @media (max-width: 850px)
-    padding: 0 4rem
-
-    @media (max-width: 550px)
-      padding: 0 2rem
-
-.devfest-content__desc
-  font-size: 1.9rem
-  max-width: 770px
-  color: $color-black
-  //background-image: url(../img/texturatexto.png)
-  //-webkit-background-clip: text
-
-  @media (max-width: 995px)
-    margin-left: auto
-    margin-right: auto
-
-  @media (max-width: 850px)
-    font-size: 1.5rem
-
-  @media (max-width: 520px)
-    margin-top: 0
-    font-size: 1.2rem
-
-.suscribe
-
-
-.suscribe__input-text,
-.suscribe__submit
-  padding: 0.5rem
-  border-radius: 0.2rem
-  font-size: 1.9rem
-  padding: 1rem 0
-  box-sizing: border-box
-
-.suscribe__input-text
-  width: 470px
-  border: 1px solid gray
-  color: gray
-  padding-left: 1em
-  padding-right: 1em
-
-  @media (max-width: 995px)
-    border-radius: 0.2em 0.2em 0 0
-
-  @media (max-width: 850px)
-    font-size: 4vw
-
-  @media (max-width: 520px)
-    font-size: 1.4rem
-
-  @media (max-width: 520px)
-    font-size: 1.2rem
-
-.suscribe__submit
-  width: 290px
-  margin-left: 0.4rem
-  border: 1px solid $color-blue-strong
-  background-color: $color-blue-strong
-  color: $color-yellow
-
-  @media (max-width: 995px)
-    margin-left: 0
-    border-radius:  0 0 0.2em 0.2em
-
-  @media (max-width: 850px)
-    font-size: 4vw
-
-  @media (max-width: 520px)
-    font-size: 1.4rem
-
-  @media (max-width: 520px)
-    font-size: 1.2rem
-
-.suscribe__input-text,
-.suscribe__submit
-  @media (max-width: 995px)
-    width: 90%
-    display: block
+  flex-direction: column
+  padding: 2rem 0 3rem
+  &__title
+    width: 95%
     margin: 0 auto
-
-.suscribe-info
-  font-size: 1.9rem
-  color: $color-blue-strong
-
-  @media (max-width: 850px)
-    font-size: 1.5rem
-
-  @media (max-width: 520px)
-    font-size: 1.2rem
-
-.about-col-dev
-  padding: 3.5rem 2rem 2.1rem
-  text-align: center
-  font-size: 1.1rem
-  color: #2D2D2D
-  background: #FCF7E7
-  border-top: 1px solid #F5EDD4
-
-  img
-    width: 100px
-
-.suscribe-info__email
-  color: $color-orange
-  display: inline-block
-  position: relative
-  text-decoration: none
-
-  &:after
-    content: '\e601'
-    font-family: icomoon
-    display: inline-block
-    margin-left: 0.8rem
-    font-size: 0.8rem
-    top: 0.8rem
-
-text
-  fill: url(#texture)
-
-.topics
-  max-width: 960px
-  margin: auto
-  //padding: 0 2rem 5rem
-
-  .table-wrapper
-    overflow: auto
-
-  h2
-    font-size: 2.5rem
-    //text-align: center
+    text-align: center
     color: $color-blue-strong
+    border-bottom: 1px solid $color-blue-strong
+  &__container
+    display: flex
+    align-items: flex-start
+    &__logo
+      width: 12rem
+    &__info
+      display: flex
+      flex-direction: column
+      justify-content: center
+      &__description a
+        color: $color-blue-strong
+        &:hover
+          color: $color-yellow
+      &__button
+        margin: .6rem 0 0
+        align-self: center
+        text-decoration: none
+        color: $color-blue-strong
+        background-color: $color-yellow
+        padding: .6rem 1.8rem
+        box-shadow: 1px 1px 5px #565656
 
-  table
-    min-width: 800px
-    width: 99.9%
+@media (min-width: 1400px)
+  .cfp
+    padding: 4rem 0
+    &__title
+      font-size: 3rem
+    &__container
+      &__info
+        &__description
+          font-size: 1.5rem
+        &__button
+          font-size: 1.6rem
 
-  td
-    width: 8%
-    border: 1px solid #eee
-    padding: 1.3rem 0.6rem
-    vertical-align: top
-    line-height: 1.4
+@media (min-width: 2400px)
+  .cfp
+    padding: 6rem 0 10rem
+    &__title
+      font-size: 5rem
+      border-bottom: 2px solid $color-blue-strong
+    &__container
+      &__logo
+        width: 25rem
+      &__info
+        &__description
+          font-size: 2.5rem
+        &__button
+          font-size: 3.5rem
+          box-shadow: 5px 5px 10px #888
 
-  tr:hover
-    td
-      background: #f8f8f8
+@media (max-width: 900px)
+  .cfp
+    width: 90%
+    &__container
+      &__logo
+        width: 10rem
+      &__info
+        &__description
+          font-size: .95rem
+          margin-bottom: 0
+        &__button
+          margin-top: .2rem
 
+@media (max-width: 550px)
+  .cfp
+    &__title
+      font-size: 1.8rem
+    &__container
+      height: 10rem
+      &__logo
+        width: 8rem
+      &__info
+        &__description
+          font-size: .85rem
+        &__button
+          margin-top: .5rem
 
-.agenda
-  max-width: 960px
-  margin: auto
-  //padding: 0 2rem 5rem
-
-  .table-wrapper
-    overflow: auto
-
-  h2
-    font-size: 2.5rem
-    //text-align: center
-    color: $color-blue-strong
-
-  table
-    min-width: 800px
-    width: 99.9%
-
-  thead
-    tr
-      th:first-child
-        background: #373D4C
-
-    tr:nth-child(2)
-      th
-        padding-bottom: 1rem
-
-    tr:first-child
-      th
-        padding-top: 1rem
-
-  tr:first-child
-    th:nth-child(3)
-      background: #233D86
-  tr:nth-child(2)
-    th:nth-child(4),
-    th:nth-child(5)
-      background: #233D86
-
-  th
-    background: $color-blue-strong
-    color: white
-    padding: 0.5rem 0.6rem
-    // border: 1px solid #4B5369
-
-
-  td:first-child
-    text-align: right
-
-  td
-    width: 8%
-    border: 1px solid #eee
-    padding: 1.3rem 0.6rem
-    vertical-align: top
-    line-height: 1.4
-
-  td:nth-child(2n)
-    width: 22.5%
-
-  tr:hover
-    td
-      background: #f8f8f8
-
-.special
-  td
-    background: #eee
-
-    &:not(:first-child)
-      font-size: 1.2rem
-
-    &:first-child
-      border-right-color: #DDD
-
-.agenda__intro
-  text-align: center
-  margin-bottom: 2rem
-  color: #868686
-  font-style: italic
-  margin-top: -1rem
-
-.center
-  text-align: center
-
-.end
-  background: #eee
-
-.full-description
-  display: none
-  border-top: 1px solid #DDDDDD
-  margin-top: 1rem
-  padding-top: 1rem
-
-  a
-    color: lighten($color-blue-strong, 20%)
-
-.hide-description,
-.show-description
-  display: block
-  margin-top: 1rem
-  // background: #ddd
-  color: #333
-  text-align: center
-  // text-decoration: none
-  padding: 5px 0
-  transition: background-color 0.3s
-  font-size: 0.8rem
-
-
-.show-description
-
-  &:before
-    content: "Ver "
-
-.hide-description
-  // background-color: #777
-
-  &:before
-    content: "Ocultar "
+@media (max-width: 440px)
+  .cfp
+    padding: 2rem 0 3.5rem
+    &__title
+      margin: 0
+      font-size: 1.4rem
+    &__container
+      &__logo
+        display: none
