--- a/content/sass/sections/_header.sass
+++ b/content/sass/sections/_header.sass
@@ -1,192 +1,181 @@
 html, body
-  height: 100%
+  font-size: 16px
   font-family: Bitter
 
-.wrapper
-  // display: table
-  height: 100%
-  max-width: 100%
-  width: 100%
-
-
-.logo
-  background: url('./../img/pataconf.png') center top no-repeat
-  height: 350px;
-
-  @media (max-width: 650px)
-    margin-bottom: 3rem
-
-  @media (max-width: 370px)
-    margin-bottom: 2rem
-
-.container-header
-  width: 100%
-  margin: 0
-  padding: 3rem 0 4rem
+// Section header
+.header
+  color: $color-white
   background-color: $color-black
+  display: flex
+  flex-direction: column
+  height: 100vh
+  justify-content: space-around
+  &__up
+    padding: 0rem 1rem 0
+    display: flex
+    justify-content: space-between
+    align-items: center
+    &__content-info
+      &__date
+        font-size: 1.5rem
+        margin-bottom: .8rem
+      &__venue
+        font-size: 1.8rem
+        font-weight: bold
+        margin-right: .4rem
+        color: $color-yellow
+    &__ticket-free
+      box-shadow: 2px 2px 8px #111
+      padding: 0.8rem 4.2rem 0.5rem 1.2rem
+      background-color: $color-yellow
+      text-decoration: none
+      color: $color-blue-strong
+      font-size: 1.4rem
+      position: relative
+      border-radius: 0.2rem
+      letter-spacing: 1px
+      transition: .3s all ease
+      &:hover
+        box-shadow: 6px 6px 10px #111
+      &:before
+        content: '\e602'
+        font-family: icomoon
+        position: absolute
+        right: 2.1%
+        top: 50%
+        z-index: 2
+        transform: translate3d(0,-50%,0)
+        font-size: 30px
+      &:after
+        content: ''
+        width: 15%
+        height: 100%
+        position: absolute
+        right: 0
+        top: 0
+        background-color: $color-orange
+        border-top-left-radius: 50%
+        border-bottom-left-radius: 50%
+        border-top-right-radius: 0.2rem
+        border-bottom-right-radius: 0.2rem
+  &__main
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    &__logo
+      letter-spacing: 5px
+      text-decoration: underline
+      background: url('./../img/pataconf.png') center top no-repeat
+      height: 350px
+      margin: 1rem 0 0
+    &__description
+      font-size: 1.3rem
+      width: 50%
+      text-align: center
 
-  @media (max-width: 370px)
-    padding: 2rem 0 3rem
+@media (min-width: 901px)
+  .header
+    &__main
+      &__logo
+        background-size: 70%
+        background-position: center 100%
 
-.main-header
-  width: 100%
-  margin: auto
-  max-width: 1200px
+@media (min-width: 1400px)
+  .header
+    &__main
+      &__logo
+        font-size: 4rem
+        height: 450px
+        background-size: 70%
+        background-position: center -60%
+        margin: 0
+      &__description
+        font-size: 2rem
+        width: 80%
 
-.hero-image
-  width: 100%
-  margin: 0
-  padding: 0
+@media (min-width: 2400px)
+  .header
+    &__up
+      &__content-info
+        &__date
+          font-size: 4rem
+        &__venue
+          font-size: 5rem
+        &__place
+          font-size: 3rem
+      &__ticket-free
+        font-size: 3rem
+        padding: 1rem 8rem 1rem 1rem
+        &:before
+          font-size: 3.5rem
+    &__main
+      &__logo
+        font-size: 5rem
+        height: 800px
+        background-size: 100%
+        background-position: center -100%
+      &__description
+        font-size: 3rem
+        width: 60%
 
-.hero-image__img
-  max-width: 100%
+@media (max-width: 900px)
+  .header
+    flex-direction: column-reverse
+    &__main
+      flex-basis: 70%
+      justify-content: center
+      &__logo
+        background-size: 80%
+        background-position: center 100%
+      &__description
+        margin: 0
+        width: 80%
+        font-size: 1rem
+        margin-top: -2rem
+        padding-bottom: .5rem
+        border-bottom: 1px solid $color-white
+    &__up
+      flex-direction: column-reverse
+      flex-basis: 30%
+      justify-content: space-around
+      &__content-info
+        text-align: center
+        &__date
+          font-size: 1.1rem
+          margin: 0
+      &__ticket-free
+          font-size: 1.2rem
+          &:before
+            right: 1%
+            font-size: 1.8rem
 
-.wrapper-info-header
-  padding: 0 7rem
-  color: white
+@media (max-width: 550px)
+  .header
+    &__main
+      &__logo
+        background-size: 65%
+        background-position: center 60%
 
-  @media (max-width: 650px)
-    padding: 0 2rem
-    text-align: center
-
-  @media (max-width: 460px)
-    padding: 0 1.4rem
-
-
-
-.main-header__description
-  max-width: 580px
-  font-size: 1.9rem
-  font-weight: bolder
-  margin-bottom: 4rem
-  letter-spacing: 2px
-
-
-  @media (max-width: 720px)
-    font-size: 3.8vw
-    margin-bottom: 3rem
-
-  @media (max-width: 460px)
-    margin-bottom: 2.5rem
-    font-size: 1.1rem
-
-  @media (max-width: 370px)
-    font-size: 1rem
-    font-weight: 300
-
-.container-info
-  +clearfix
-  // display: table
-  // width: 100%
-
-.container-info__info,
-.container-info__button
-  // display: table-cell
-  // width: 50%
-
-.container-info__info
-  font-size: 1.3rem
-  letter-spacing: 2px
-  line-height: 1.4
-  float: left
-  margin: 0
-
-  @media (max-width: 1070px)
-    float: none
-
-  @media (max-width: 720px)
-    font-size: 3.1vw
-
-  @media (max-width: 460px)
-    font-size: 0.8rem
-    line-height: 1.4
-
-.container-info__info__ruta-n
-  color: $color-yellow
-  font-size: 1.2em
-  font-weight: bold
-  // padding-left: 0.5rem
-  display: inline-block
-  position: relative
-
-  // &:before
-  //   content: ''
-  //   height: 100%
-  //   display: inline-block
-  //   width: 1px
-  //   background-color: rgba(255, 255, 255, 0.27)
-  //   position: absolute
-  //   left: 0
-  //
-  // @media (max-width: 460px)
-  //   &:before
-  //     display: none
-
-.container-info__info__date
-  display: block
-
-.container-info__info__place
-  font-size: 0.6em
-  letter-spacing: 1px
-
-  @media (max-width: 460px)
-    font-size: 0.9em
-
-.container-info__button
-  padding: 0.8rem 4.2rem 0.5rem 1.2rem
-  background-color: $color-yellow
-  text-align: left
-  text-decoration: none
-  color: $color-blue-strong
-  font-size: 1.4rem
-  position: relative
-  border-radius: 0.2rem
-  letter-spacing: 1px
-  font-weight: 300
-  float: right
-
-  @media (max-width: 1070px)
-    float: none
-    margin-top: 2rem
-    display: inline-block
-
-  @media (max-width: 720px)
-    font-size: 3.3vw
-
-  @media (max-width: 480px)
-    font-size: 4.1vw
-
-  @media (max-width: 370px)
-    font-size: 2.3vh
-
-  &:before
-    content: '\e602'
-    font-family: icomoon
-    position: absolute
-    right: 2.1%
-    top: 50%
-    z-index: 2
-    transform: translate3d(0,-50%,0)
-    font-size: 30px
-
-    @media (max-width: 590px)
-      font-size: 25px
-
-    @media (max-width: 480px)
-      font-size: 20px
-
-  &:after
-    content: ''
-    width: 15%
-    height: 100%
-    position: absolute
-    right: 0
-    top: 0
-    background-color: $color-orange
-    border-top-left-radius: 50%
-    border-bottom-left-radius: 50%
-    border-top-right-radius: 0.2rem
-    border-bottom-right-radius: 0.2rem
-
-    @media (max-width: 300px)
-      width: 20%
+@media (max-width: 400px)
+  .header
+    &__main
+      &__logo
+        width: 300px
+        font-size: 1.8rem
+        text-align: center
+        letter-spacing: 1px
+        background-size: 100%
+        background-position: center bottom
+      &__description
+        font-size: 1.2rem
+        border-bottom: 0
+        width: 100%
+        padding: 0
+    &__up
+      &__ticket-free
+        font-size: .95rem
+        text-align: center
+        &:before
+          right: 1%
+          font-size: 1.5rem
