Added the schedule of the event

--- a/content/sass/sections/_content.sass
+++ b/content/sass/sections/_content.sass
@@ -13,6 +13,53 @@
   &__container
     display: flex
     align-items: flex-start
+    table
+      min-width: 800px
+      width: 99.9%
+      margin-top: 10px;
+    thead
+
+      tr:nth-child(2)
+        th
+          padding-bottom: 1rem
+
+      tr:first-child
+        th
+          padding-top: 1rem
+
+    tr:first-child
+      th:nth-child(3)
+        background: #233D86
+    tr:nth-child(2)
+      th:nth-child(4),
+      th:nth-child(5)
+        background: #233D86
+
+    th
+      background: $color-black
+      color: white
+      padding: 0.5rem 0.6rem
+      border: 1px solid #4B5369
+
+
+    td:first-child
+      text-align: left
+
+    td
+      width: 8%
+      border: 1px solid #eee
+      padding: 1.3rem 0.6rem
+      vertical-align: top
+      line-height: 1.4
+
+    td:nth-child(2n)
+      width: 22.5%
+
+    tr:hover
+      td
+        background: #f8f8f8
+    tbody
+      text-align: center
     &__logo
       width: 12rem
     &__info
