Actualizado el color de fondo del footer

--- a/css/theme.css
+++ b/css/theme.css
@@ -2703,10 +2703,10 @@ a {
   color: #fff;
 }
 .color--dark {
-  color: #252525;
+  color: #58220f;
 }
 .bg--dark {
-  background: #252525;
+  background: #58220f;
 }
 .bg--dark:not(.nav-bar):not(.bar) {
   color: #ffffff;
