--- a/style.css
+++ b/style.css
@@ -82,7 +82,8 @@ body {
 .logo {
   margin-top: 10px;
 }
-.main-menu {
+.pataconf-logo {
+  height: 270px;
 }
 .main-menu ul {
   margin: 0;
@@ -153,6 +154,9 @@ body {
   align-items: center;
   display: flex;
   height: 100%;
+}
+.slider-content a {
+  color: #fdd92d !important;
 }
 .slider-content h2 {
   color: #fdd92d;
